# CS499_capstone_population_prediction_platform

./: .dockerignore  .env  .env_example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  requirements.txt
api/app/: main.py
artifacts/: population_db_test_pack.sql
artifacts/validation/: acs_multi_validation_acs_multi_2025-09-18.json  bls_laus_validation_bls_laus_2025-09-18.json  fred_CUSR0000SEHC_validation_fred_2025-09-18.json
db/init/: 001_schema.sql  002_raw_stg.sql
docker/: cron_command.sh  cron_train.sh  etl_entrypoint.sh
etl/: Dockerfile
models/: linear_model.pkl  metrics.csv  prophet_forecast.csv  prophet_model.json  ridge_model.pkl  xgb_model.pkl
notebooks/: model_eval.ipynb
src/ppp_api/: main.py
src/ppp_common/: db.py  orm.py  settings.py
src/ppp_etl/jobs/: sample_census_ingest.py
src/ppp_etl/jobs/acs/: acs_ingest.py  population_ingest.py
src/ppp_etl/jobs/bls/: bls_unrate_us_ingest.py  laus_unrate_ingest.py
src/ppp_etl/jobs/fred/: cpi_ingest.py
src/ppp_etl/jobs/lib/: layers.py  util.py
src/ppp_ml/: __init__.py  artifacts.py  backtest.py  db.py  features.py  hashers.py  linear_regression.py  prophet_forecast.py  ridge_regression.py  training_io.py  utils.py  xgb_forecast.py
src/ppp_ml/cli/: train_all_geos.py  train_linear.py  train_prophet.py  train_ridge.py  train_xgb.py
ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
ui/src/: GeoPickers.jsx  PopulationDashboard.jsx  index.css  main.jsx
ui/src/components/ui/: button.jsx  card.jsx  input.jsx  label.jsx
